--- a/TaskMaster/app/src/main/res/layout/activity_add_task.xml
+++ b/TaskMaster/app/src/main/res/layout/activity_add_task.xml
@@ -119,4 +119,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/addimg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="400dp"
+        android:text="Add Img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
