--- a/TaskMaster/app/src/main/res/layout/activity_all_tasks.xml
+++ b/TaskMaster/app/src/main/res/layout/activity_all_tasks.xml
@@ -25,6 +25,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:srcCompat="@drawable/img_dubai_uae" />
+        app:layout_constraintVertical_bias="0.498" />
 </androidx.constraintlayout.widget.ConstraintLayout>
